Removed bugs identified by findBugs, including the Feature class which had implemented equals() method but not hashCode() method.
git-svn-id: http://svn.jcvi.org/ANNOTATION/RulesBasedAnnotation/trunk@32729 061605af-e407-0410-a945-9c8a22772c06