@@ -1,11 +1,14 @@
 package org.jcvi.annotation.dao;
 
 import java.io.BufferedReader;
+import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.URL;
 import java.util.Map;
 
 import org.jcvi.annotation.facts.Taxon;
+
+import com.sun.xml.internal.ws.Closeable;
 
 public class NCBITaxonomyDAO extends GenericTaxonomyDAO {
 
@@ -45,21 +48,18 @@ public class NCBITaxonomyDAO extends GenericTaxonomyDAO {
 	public void loadNodes() {
 
 		// Make sure the names are loaded first
-		if (taxonomyMap.size() == 0)
-			this.loadNames();
+		if (taxonomyMap.size() == 0) this.loadNames();
 
+		BufferedReader nodesRdr = null;
 		try {
-			BufferedReader nodesRdr = new BufferedReader(new InputStreamReader(
-					nodesUrl.openStream()));
+			nodesRdr = new BufferedReader(new InputStreamReader(nodesUrl.openStream()));
 
 			String line;
 			while ((line = nodesRdr.readLine()) != null) {
 				String[] parts = line.split("\\|");
 				Integer taxonId = Integer.valueOf(parts[0].trim());
 				String pti = parts[1].trim();
-				Integer parentTaxonId = (pti.length() > 0 && pti != "all") ? new Integer(
-						pti)
-						: null;
+				Integer parentTaxonId = (pti.length() > 0 && !(pti.equals("all"))) ? new Integer(pti) : null;
 
 				// Get our Taxon object
 				Taxon t = taxonomyMap.get(taxonId);
@@ -70,9 +70,13 @@ public class NCBITaxonomyDAO extends GenericTaxonomyDAO {
 				// Set the parent
 				t.setParent(p);
 			}
+			nodesRdr.close();
 
-		} catch (Exception e) {
+		} catch (IOException e) {
 			e.printStackTrace();
+		
+		} finally {
+			this.close(nodesRdr);
 		}
 	}
 
@@ -83,8 +87,9 @@ public class NCBITaxonomyDAO extends GenericTaxonomyDAO {
 
 	// Option: load only taxon names of reqNameClass
 	public void loadNames(boolean addSynonyms) {
+		BufferedReader namesRdr = null;
 		try {
-			BufferedReader namesRdr = new BufferedReader(new InputStreamReader(
+			namesRdr = new BufferedReader(new InputStreamReader(
 					namesUrl.openStream()));
 
 			String line;
@@ -108,25 +113,26 @@ public class NCBITaxonomyDAO extends GenericTaxonomyDAO {
 					// t.addName(name);
 				}
 			}
+			namesRdr.close();
 
 		} catch (Exception e) {
 			e.printStackTrace();
+		} finally {
+			this.close(namesRdr);
 		}
 	}
 
 	public Taxon setParentTaxon(Taxon t) {
+		BufferedReader nodesRdr = null;
 		try {
-			BufferedReader nodesRdr = new BufferedReader(new InputStreamReader(
-					nodesUrl.openStream()));
-
+			nodesRdr = new BufferedReader(new InputStreamReader(nodesUrl.openStream()));
 			String line;
 			while ((line = nodesRdr.readLine()) != null) {
 				String[] parts = line.split("\\|");
 				Integer taxonId = Integer.valueOf(parts[0].trim());
 				String pti = parts[1].trim();
-				Integer parentTaxonId = (pti.length() > 0 && pti != "all") ? new Integer(
-						pti)
-						: null;
+				Integer parentTaxonId = (pti.length() > 0 && !(pti.equals("all"))) 
+							? new Integer(pti) : null;
 
 				if (t.getTaxonId() == taxonId) {
 
@@ -139,16 +145,31 @@ public class NCBITaxonomyDAO extends GenericTaxonomyDAO {
 					return t;
 				}
 			}
-		} catch (Exception e) {
+			nodesRdr.close();
+			
+		} catch (IOException e) {
 			e.printStackTrace();
+		} finally {
+			this.close(nodesRdr);
 		}
 		return t;
 	}
 
+	public void close (BufferedReader stream) {
+		try {
+			if (stream != null) {
+				stream.close();
+			}
+		} catch (IOException e) {
+			e.printStackTrace();
+		}
+	}
+	
 	public Taxon getTaxon(String taxonName) {
 
+		BufferedReader namesRdr = null;
 		try {
-			BufferedReader namesRdr = new BufferedReader(new InputStreamReader(
+			namesRdr = new BufferedReader(new InputStreamReader(
 					namesUrl.openStream()));
 
 			String line;
@@ -159,15 +180,21 @@ public class NCBITaxonomyDAO extends GenericTaxonomyDAO {
 				if (name.equalsIgnoreCase(taxonName.trim()))
 					return new Taxon(taxonId, name);
 			}
+			namesRdr.close();
+			
 		} catch (Exception e) {
 			e.printStackTrace();
+			
+		} finally {
+			this.close(namesRdr);
 		}
 		return null;
 	}
 
 	public Taxon getTaxon(int taxonId) {
+		BufferedReader namesRdr = null;
 		try {
-			BufferedReader namesRdr = new BufferedReader(new InputStreamReader(
+			namesRdr = new BufferedReader(new InputStreamReader(
 					namesUrl.openStream()));
 
 			String line;
@@ -176,10 +203,15 @@ public class NCBITaxonomyDAO extends GenericTaxonomyDAO {
 				String name = parts[1].trim();
 				int id = Integer.parseInt(parts[0].trim());
 				if (id == taxonId)
-					return new Taxon(new Integer(id), name);
+					return new Taxon(Integer.valueOf(id), name);
 			}
+			namesRdr.close();
+			
 		} catch (Exception e) {
 			e.printStackTrace();
+		
+		} finally {
+			this.close(namesRdr);
 		}
 
 		return null;
