@@ -35,7 +35,7 @@ public class TestSmallGenomeTaxonomyDAO extends TestCase {
 
 		try {
 			t = taxonomyDAO.getTaxon(new Integer(9999999));
-			assertFalse(t instanceof Taxon);
+			assertFalse(t == null);
 		} catch (DaoException e) {
 			assertTrue( e instanceof DaoException);
 		}
@@ -46,7 +46,7 @@ public class TestSmallGenomeTaxonomyDAO extends TestCase {
 		assertTrue(taxonomyDAO.iterator().next() instanceof Taxon);
 
 		// Test the various ways of defining a new Taxon object
-		Taxon t1 = new Taxon(new Integer(9999999));
+		Taxon t1 = new Taxon(Integer.valueOf(9999999));
 		Taxon t2 = taxonomyDAO.getTaxon(390805);
 		Taxon t3 = taxonomyDAO.getTaxon("Geosporobacter");
 		
